Committed updated data loading scripts from earlier (didn't completely commit most recent changes)

--- a/main/dataset/import_data.ipynb
+++ b/main/dataset/import_data.ipynb
@@ -278,15 +278,16 @@
     }
    ],
    "source": [
-    "for i, data1_name in enumerate(data1.keys()):\n",
-    "    fig = plt.figure()\n",
-    "    fig.suptitle(\"Examples of \"+data1_name.upper()+\" (Test Set)\")\n",
-    "    for img_num in range(4):\n",
-    "        rand_img = random.randint(0,len(data1[data1_name]['Xtrain']))\n",
-    "        ax = fig.add_subplot(2,2,img_num+1)\n",
-    "        ax.imshow(data1[data1_name]['Xtrain'][rand_img],interpolation='nearest')\n",
-    "        ax.set_title(data1[data1_name]['ytrain'][rand_img]['plate']);\n",
-    "    fig.show()"
+    "def visualize_dataset(data1):\n",
+    "    for i, data1_name in enumerate(data1.keys()):\n",
+    "        fig = plt.figure()\n",
+    "        fig.suptitle(\"Examples of \"+data1_name.upper()+\" (Test Set)\")\n",
+    "        for img_num in range(4):\n",
+    "            rand_img = random.randint(0,len(data1[data1_name]['Xtrain']))\n",
+    "            ax = fig.add_subplot(2,2,img_num+1)\n",
+    "            ax.imshow(data1[data1_name]['Xtrain'][rand_img],interpolation='nearest')\n",
+    "            ax.set_title(data1[data1_name]['ytrain'][rand_img]['plate']);\n",
+    "        fig.show()"
    ]
   },
   {
@@ -420,17 +421,18 @@
     }
    ],
    "source": [
-    "for i, data1_name in enumerate(data1.keys()):\n",
-    "    fig = plt.figure()\n",
-    "    fig.suptitle(\"Examples of \"+data1_name.upper()+\" (Train Set)\")\n",
-    "    for img_num in range(4):\n",
-    "        rand_img = random.randint(0,len(data1[data1_name]['Xtrain'])-1)\n",
-    "        ax = fig.add_subplot(2,2,img_num+1)\n",
-    "        draw_result(ax, data1[data1_name]['Xtrain'][rand_img],\n",
-    "                    [data1[data1_name]['ytrain'][rand_img]['box']],\n",
-    "                    [data1[data1_name]['ytrain'][rand_img]['plate']])\n",
-    "        ax.set_title(data1[data1_name]['ytrain'][rand_img]['plate']);\n",
-    "    fig.show()"
+    "def visualize_dataset_with_boxes(data1):\n",
+    "    for i, data1_name in enumerate(data1.keys()):\n",
+    "        fig = plt.figure()\n",
+    "        fig.suptitle(\"Examples of \"+data1_name.upper()+\" (Train Set)\")\n",
+    "        for img_num in range(4):\n",
+    "            rand_img = random.randint(0,len(data1[data1_name]['Xtrain'])-1)\n",
+    "            ax = fig.add_subplot(2,2,img_num+1)\n",
+    "            draw_result(ax, data1[data1_name]['Xtrain'][rand_img],\n",
+    "                        [data1[data1_name]['ytrain'][rand_img]['box']],\n",
+    "                        [data1[data1_name]['ytrain'][rand_img]['plate']])\n",
+    "            ax.set_title(data1[data1_name]['ytrain'][rand_img]['plate']);\n",
+    "        fig.show()"
    ]
   },
   {
@@ -457,7 +459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
